表示改善＆回数制限、入力チェック機能改善

--- a/api/project108/cheering/templates/cheering/index.html
+++ b/api/project108/cheering/templates/cheering/index.html
@@ -1,7 +1,16 @@
-<p>Hello</p>
+<a href="{% url 'account:logout' %}">logout</a>
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <div>user: {{ user }}</div>
 {% if count %}
-    <div>count: {{ count.count }}</div>
+    <div>today count: {{ count.count }}</div>
+{% else %}
+    <div>today count: 0</div>
 {% endif %}
 <form action="call/" method="post">
     {% csrf_token %}
